[ADD] 14.0 pms real avail compute (#60)
* [ADD]pms: avail real

* [ADD] Wizards adaptation multiproperty & new real avail model

* [ADD] Tests Wizard avail

--- a/pms/wizards/wizard_folio.xml
+++ b/pms/wizards/wizard_folio.xml
@@ -23,11 +23,13 @@
                     <div class="col-5">
                         <group>
                             <field name="partner_id" string="Partner" required="1" />
-                             <field
+                            <field name="pms_property_id" required="1" />
+                            <field
                                 default_focus="1"
                                 name="pricelist_id"
                                 string="Pricelist"
                                 required="1"
+                                domain="['|', ('pms_property_ids', '=', False), ('pms_property_ids', 'in', pms_property_id)]"
                             />
                         </group>
                     </div>
