--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -178,6 +178,7 @@
                             placeholder="Room Type"
                             on_change="1"
                             nolabel="1"
+                            context="{'checkin': checkin, 'checkout': checkout, 'pms_property_id':pms_property_id, 'pricelist_id':pricelist_id}"
                             options="{'no_create': True,'no_open': True}"
                             attrs="{'readonly':[('state','not in',('draft'))]}"
                             style="margin-right: 30px;"
