[ADD] 14.0 pms housekeeping (#44)
* [IMP] housekeeping first commint

* [ADD] Demo data

* [ADD] Models

* [FIX] demo notes

* [IMP] Housekeeping basics

* [IMP] PMS Housekeeping Task and Rack management

* [FIX] Icons and date parameter

* [ADD] Today tasks kanban

* [ADD] Housekeeping form View

* [ADD] Housekeeping Lost & Found

* [ADD] Precommit and README

Co-authored-by: Darío Lodeiros <dario@commitsun.com>

--- a/pms/views/pms_room_views.xml
+++ b/pms/views/pms_room_views.xml
@@ -3,6 +3,7 @@
     <record model="ir.ui.view" id="pms_room_view_form">
         <field name="name">pms.room.form</field>
         <field name="model">pms.room</field>
+        <field name="priority" eval="30" />
         <field name="arch" type="xml">
             <form string="Property Room">
                 <sheet>
