[ADD] Folio report (#59)
* [IMP] Pms: Improve folio report

* [IMP] Pms: Add show detail check in board_service and folio report

* [IMP] Pms: Show currency in all monetary fields

* [IMP] Pms: fix price_unit in folio_report

* [IMP] Pms: add discounts in board_service price

* [IMP] Pms: fix discount calculation

* Pre-commit and rebase done

--- a/pms/views/pms_board_service_views.xml
+++ b/pms/views/pms_board_service_views.xml
@@ -19,6 +19,7 @@
                             <field name="amount" />
                         </tree>
                     </field>
+                    <field name="show_detail_report" />
                 </group>
             </form>
         </field>
@@ -30,6 +31,7 @@
             <tree string="Board Services">
                 <field name="name" />
                 <field name="amount" />
+                <field name="show_detail_report" />
             </tree>
         </field>
     </record>
