--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -6,12 +6,15 @@
         priority="20"
     >
         <xpath expr="//ol[hasclass('o_portal_submenu')]" position="inside">
-            <li t-if="page_name == 'folios'" t-attf-class="breadcrumb-item #{'active ' if not folios else ''}">
+            <li
+                t-if="page_name == 'folios'"
+                t-attf-class="breadcrumb-item #{'active ' if not folios else ''}"
+            >
                 <a t-attf-href="/my/folios?{{ keep_query() }}">Folios</a>
             </li>
             <li t-if="folio" class="breadcrumb-item active">
                  <a t-attf-href="/my/folios?{{ keep_query() }}">Folios/</a>
-                <t t-esc="folio.name"/>
+                <t t-esc="folio.name" />
             </li>
         </xpath>
     </template>
@@ -121,8 +124,18 @@
                                     >Salesperson</strong></div>
                                 <div class="row flex-nowrap">
                                     <div class="col flex-grow-0 pr-2">
-                                        <img class="rounded-circle mr4 float-left o_portal_contact_img" t-if="folio.user_id.image_1024" t-att-src="image_data_uri(folio.user_id.image_1024)" alt="Contact"/>
-                                        <img class="rounded-circle mr4 float-left o_portal_contact_img" t-if="not folio.user_id.image_1024" src="/web/static/src/img/placeholder.png" alt="Contact"/>
+                                        <img
+                                            class="rounded-circle mr4 float-left o_portal_contact_img"
+                                            t-if="folio.user_id.image_1024"
+                                            t-att-src="image_data_uri(folio.user_id.image_1024)"
+                                            alt="Contact"
+                                        />
+                                        <img
+                                            class="rounded-circle mr4 float-left o_portal_contact_img"
+                                            t-if="not folio.user_id.image_1024"
+                                            src="/web/static/src/img/placeholder.png"
+                                            alt="Contact"
+                                        />
                                     </div>
                                     <div class="col pl-0" style="min-width: 150px">
                                         <span
