[IMP] allow invoicing several partners from folio (#64)
field partner_invoice_id (m2o)->partner_invoice_ids(m2m)

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -381,7 +381,7 @@
                             </div>
                             <group>
                                 <field
-                                    name="partner_invoice_id"
+                                    name="partner_invoice_ids"
                                     string="Contact Invoiced"
                                 />
                             </group>
@@ -484,7 +484,7 @@
         <field name="arch" type="xml">
             <search string="Tables Detail">
                 <field name="partner_id" />
-                <field name="partner_invoice_id" />
+                <field name="partner_invoice_ids" />
                 <field name="agency_id" />
                 <filter
                     name="to_invoice"
@@ -506,7 +506,7 @@
                     <filter
                         string="Invoice Contact"
                         name="group_invoice_contact"
-                        context="{'group_by':'partner_invoice_id'}"
+                        context="{'group_by':'partner_invoice_ids'}"
                     />
                     <filter
                         string="Tour Operator"
