--- a/pms/report/pms_folio_templates.xml
+++ b/pms/report/pms_folio_templates.xml
@@ -6,9 +6,11 @@
         <t t-set="address">
             <div class="row">
                     <div class="col-xs-6">
-                        <t t-if="doc.partner_invoice_id != doc.partner_id">
+                        <t
+                            t-if="len(doc.partner_invoice_ids)==1 and doc.partner_id != doc.partner_invoice_ids[0]"
+                        >
                             <div
-                                t-field="doc.partner_invoice_id"
+                                t-field="doc.partner_invoice_ids[0]"
                                 t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
                             />
                         </t>
