--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -178,9 +178,9 @@
                 class="row pb-2 pt-3 #{'card-header bg-white' if report_type == 'html' else ''}"
             >
                     <div class="col-xs-6">
-                        <t t-if="folio.partner_invoice_id != folio.partner_id">
+                        <t t-if="folio.partner_invoice_ids[0] != folio.partner_id">
                             <div
-                            t-field="folio.partner_invoice_id"
+                            t-field="folio.partner_invoice_ids"
                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
                         />
                         </t>
